--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sistem Tryout PPPK & CPNS dari Tim ASN</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
-  <!-- <link rel="icon" href="./favicon.ico" /> -->
-  <link rel="shortcut icon" href="#">
 
 </head>
 
